@@ -1,2 +1,3 @@
-Executa o jar dentro de out/ para testar
+Para compilar o código insira o comando abaixo na src/ do projeto.
+javac --module-path "../javafx/" --add-modules javafx.swt,javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.swing Controller/*.java Model/*.java;  java --module-path "../javafx/" --add-modules javafx.swt,javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.swing Controller.Main
 
